# rust_weather

./: Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: rust.yml  security_audit.yml
src/: lib.rs  main.rs
