[package]
authors = ["Sebastian Tremmel <littleperlmonk@gmail.com>"]
description = "A small cli program that gets weather data for your area"
edition = "2021"
license = "MIT"
name = "rust_weather"
version = "0.1.0"

[dependencies]
anyhow = "1.0.47"
chrono = "0.4.19"
reqwest = {version = "0.11.6", default-features = false, features = ["json", "rustls-tls"]}
serde = "1.0.130"
serde_derive = "1.0.130"
tokio = {version = "1.14.0", features = ["full"]}
type-cli = "0.0.3"

[dev-dependencies.cargo-husky]
default-features = false # Disable features which are enabled by default
features = ["user-hooks"] 
version = "1" 

[patch.crates-io]
chrono = {git = "https://github.com/timvisee/chrono", branch = "time-0.3"}
